--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,47 @@
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h1 {
+}
+
 #gameBoardContainer {
     display: grid;
     grid: 100px 100px 100px / 100px 100px 100px;
     justify-items: center;
-    margin: 0 auto;
 }
 
 .cell {
     height: 100px;
     width: 100px;
     border: 1px solid black;
+}
+
+dialog {
+    top: 200px;
+    border: none;
+    background-color: rgb(93, 228, 66);
+}
+
+form > div:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+form > div:last-child {
+    text-align: center;
+}
+
+
+input {
+    padding: 5px;
+    border-radius: 5px;
+}
+
+button {
+    padding: 8px 24px;
+    border-radius: 5px;
+    border: none;
 }
