--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ dialog {
     top: 200px;
     border: none;
     background-color: rgb(93, 228, 66);
+    border-radius: 5px;
 }
 
 form > div:not(:last-child) {
