--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    min-height: 100%;
+    background-attachment: fixed;
+    background-image: linear-gradient(to top, rgb(0, 128, 128), rgb(1, 219, 219));
 }
 
 h1 {
@@ -12,17 +15,28 @@ h1 {
     display: grid;
     grid: 100px 100px 100px / 100px 100px 100px;
     justify-items: center;
+    gap: 10px;
+    background-color: aquamarine;
 }
 
 .cell {
     height: 100px;
     width: 100px;
-    border: 1px solid black;
+    border-radius: 5px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 4rem;
 }
 
 #gameArea {
     display: flex;
     justify-content: center;
+    padding: 20px;
+    border-radius: 20px;
+    background-color: aquamarine;
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.288);
 }
 
 #playerOneBoard,
