--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ h1 {
     border-radius: 20px;
     background-color: aquamarine;
     box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.288);
+    position: relative;
 }
 
 #playerOneBoard,
@@ -44,6 +45,11 @@ h1 {
     text-align: center;
     padding: 0px 16px;
     max-width: 200px;
+}
+
+#popover {
+    position: absolute;
+    
 }
 
 dialog {
@@ -76,3 +82,5 @@ button {
 .hidden {
     visibility: hidden;
 }
+
+
