--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,20 @@ h1 {
 
 #popover {
     position: absolute;
-    
+    top: 50%;
+    left: 50%;
+    transition: opacity 250ms, transform 250ms;
+    opacity: 1;
+    transform: translateX(-50%) translateY(-50%) scaleX(1) scaleY(1); 
+    background-color: white;
+    border: 2px dashed black;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.popover-hidden {
+    opacity: 0 !important;
+    transform: translateX(-50%) translateY(-50%) scaleX(0.9) scaleY(0.9) !important;
 }
 
 dialog {
@@ -82,5 +95,7 @@ button {
 .hidden {
     visibility: hidden;
 }
+
+
 
 
