--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ dialog {
     border: none;
     background-color: rgb(93, 228, 66);
     border-radius: 5px;
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.274);
 }
 
 form > div:not(:last-child) {
@@ -85,12 +86,21 @@ form > div:last-child {
 input {
     padding: 5px;
     border-radius: 5px;
+    border: none;
+}
+
+input:focus {
+    box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.253);
 }
 
 button {
     padding: 8px 24px;
     border-radius: 5px;
     border: none;
+}
+
+#restartButton {
+    margin-top: 10px;
 }
 
 .hidden {
